[gd_scene load_steps=4 format=3 uid="uid://dumjbqixlovxl"]

[ext_resource type="Script" uid="uid://cqa72iqc61oqh" path="res://Scenes/Level/world_limits.gd" id="1_pdkli"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_1ov45"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_lscpc"]

[node name="WorldLimits" type="Node2D"]
script = ExtResource("1_pdkli")

[node name="TopArea" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="TopArea"]
rotation = 3.14159
shape = SubResource("WorldBoundaryShape2D_1ov45")

[node name="BottomArea" type="Area2D" parent="."]
unique_name_in_owner = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="BottomArea"]
shape = SubResource("WorldBoundaryShape2D_lscpc")

[connection signal="body_entered" from="TopArea" to="." method="on_limit_touched"]
[connection signal="body_entered" from="BottomArea" to="." method="on_limit_touched"]
